validator_derive_tests/tests/compile-fail/must_match/field_doesnt_exist.stderr
error: Invalid argument for `must_match` validator of field `password`: the other field doesn't exist in struct
 --> $DIR/field_doesnt_exist.rs:5:5
  |
5 |     #[validate(must_match = "password2")]
  |     ^
